# acton

./: .editorconfig  .gitattributes  .gitignore  1.tolk  Acton.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  _typos.toml  acton.schema.json  build.rs  bunfig.toml  child.tolk  deny.toml  dist-workspace.toml  hello.txt  install.sh  justfile  main.tolk  main_test.tolk  package.json  snippet.tolk  toncenter_account_info.tolk  wrapper.h
.cargo/: config.toml
.config/: nextest.toml
.github/: CODEOWNERS  zizmor.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-grammars.yml  build-release-binaries.yml  build-ton-ls-vscode.yml  build.yml  check-deps.yml  check-installer-file.yml  check-release.yml  check.yml  deny.yml  deploy-docs.yml  github-cleanup.yml  grammars.yml  labeler.yml  publish-mirror.yml  release-objs.yml  release.yml  trunk-objs.yml  ubicloud-cleanup.yml
.jetton/tests/: treasury.tolk  wallet.test.tolk  wallet_test.tolk
assets/jest/: acton-jest-matchers.cjs
crates/abi/: Cargo.toml
crates/abi/src/: abi_serde.rs  lib.rs
crates/acton-config/: Cargo.toml
crates/acton-debug/: Cargo.toml
crates/acton-explorer-ui/: index.html  package.json  tsconfig.json  vite.config.ts
crates/acton-litenode-ui/: bunfig.toml  package.json  vite.config.ts
crates/acton-localnet-ui/: package.json  vite.config.ts
crates/acton-shared-ui/: bunfig.toml  package.json
crates/acton-test-ui/: bunfig.toml  package.json
crates/dap/: Cargo.toml
crates/dap-client/: Cargo.toml
crates/dap-client/src/: lib.rs
crates/emulator/: Cargo.toml  build.rs
crates/emulator/src/: blockchain.rs  config.rs  default_config.boc  emulator.rs  executor.rs  exit_codes.rs  extensions.rs  get_executor.rs  lib.rs  step_executor.rs  step_get_executor.rs  utils.rs  world_state.rs
crates/emulator/src/remote/: mod.rs
crates/emulator/src/tuple/: stack.rs
crates/fift-syntax/: Cargo.toml
crates/retrace/: Cargo.toml
crates/retrace/src/: lib.rs  methods.rs  remote.rs  runner.rs  tests.rs  trace.rs  types.rs
crates/tasm/: Cargo.toml
crates/tasm-core/: Cargo.toml  build.rs
crates/tasm-syntax/: Cargo.toml
crates/tasm/src/: decompile.rs  lib.rs  printer.rs  spec.rs  types.rs
crates/tasm/src/func_decompile/: ast.rs  inspect.rs  method_model.rs  mod.rs  pipeline.rs  render.rs  stage_patterns.rs  stage_rename.rs  stage_simplify.rs  stage_stack.rs  tests.rs
crates/tasm/tests/golden/: 01_arith.fc  02_if_else.fc  03_while.fc  04_repeat.fc  05_do_until.fc  06_throw.fc  07_func_call.fc  08_builder_slice.fc  counter.fc  counter2.fc  jetton-minter.fc  jetton-wallet.fc
crates/tolk-analysis/: Cargo.toml
crates/tolk-ast/: Cargo.toml
crates/tolk-linter/: Cargo.toml
crates/tolk-linter/src/: lib.rs  profiling.rs
crates/tolk-linter/src/rules/: diagnostic.rs  mod.rs  violation.rs
crates/tolk-linter/src/rules/ast/: acton_import_in_contract.rs  asm_function_missing_safety_comment.rs  camel_case_detector.rs  compiler_error.rs  deprecated_symbol_use.rs  duplicated_condition.rs  enum_cast_missing_safety_comment.rs  field_init_can_be_folded.rs  import_path_can_use_mappings.rs  incoming_messages_duplicate_opcode.rs  js_plugin.rs  message_entity_naming.rs  method_can_be_static.rs  mod.rs  mode_literal_helpers.rs  mutable_parameter_can_be_immutable.rs  mutable_variable_can_be_immutable.rs  name_case_checker.rs  negated_is_type_can_use_not_is.rs  no_bounce_handler.rs  parameter_mutation_requires_mutable.rs  pure_function_call_unused.rs  reserve_mode_literal.rs  send_mode_literal.rs  throw_requires_errors_enum.rs  unused_expression.rs  unused_import.rs  unused_variable.rs  used_ignored_identifier.rs  write_only_variable.rs
crates/tolk-linter/src/rules/dfa/: mod.rs
crates/tolk-linter/src/rules/dfa/divide_before_multiply/: analysis.rs
crates/tolk-linter/src/rules/dfa/random_requires_initialization/: analysis.rs  mod.rs
crates/tolk-linter/src/rules/dfa/unauthorized_access/: analysis.rs  mod.rs
crates/tolk-linter/src/rules/utils/: cases.rs  mod.rs
crates/tolk-macros/: Cargo.toml
crates/tolk-macros/src/: lib.rs  map_codes.rs  violation_metadata.rs
crates/tolk-resolver/: Cargo.toml
crates/tolk-resolver/src/: file_db.rs  file_index.rs  project_index.rs  resolve_index.rs  resolve_tests.rs  symbol_resolver.rs
crates/tolkc/: Cargo.toml  build.rs
crates/tolkc/assets/fift/: Asm.fif
crates/tolkc/assets/tolk-stdlib/: common.tolk  strings.tolk
crates/tolkc/src/: abi.rs  compiler.rs  lib.rs  source_map.rs  types_kernel.rs
crates/ton-api/: Cargo.toml
crates/ton-api/src/: lib.rs
crates/ton-executor/: Cargo.toml  build.rs
crates/ton-executor/src/: common.rs  lib.rs
crates/ton-executor/src/get/: mod.rs  step.rs  tests.rs  types.rs
crates/ton-executor/src/message/: mod.rs  step.rs  tests.rs  types.rs
crates/ton-liteapi/: Cargo.toml  NOTICE.md
crates/ton-liteapi/src/: lib.rs
crates/ton-liteapi/src/liteclient/: layers.rs  mod.rs  peer.rs
crates/ton-liteapi/src/tl/: adnl.rs  tests.rs
crates/tvmffi/: Cargo.toml
crates/tvmffi-macros/: Cargo.toml
crates/tvmffi-macros/src/: lib.rs
crates/tvmffi-macros/tests/: option_test.rs  simple.rs
crates/tvmffi/src/: format.rs  from_stack.rs  json_stack.rs  lib.rs  serde.rs  snake_string.rs  stack.rs  to_stack.rs
docs/: README.md  astro.config.mjs  mdx-components.tsx  next.config.mjs  package-lock.json  package.json  source.config.ts  your-first-integration-test-in-tolk.md
docs2/: next.config.mjs  package.json
lib/: build.tolk  fetch.tolk  fmt.test.tolk  fmt.tolk  fmt_test.tolk  fs.tolk  io.tolk  json.tolk  liteserver.tolk  tsa.tolk
src/: abi.rs  asserts_exts.rs  compiler.rs  config.rs  context.rs  contract_interface.rs  dap.rs  debug_context.rs  debug_variables.rs  executor.rs  exit_codes.rs  exts.rs  exts_lib.rs  file_build_cache.rs  formatter.rs  get_executor.rs  io_exts.rs  lib.rs  main.rs  retrace.rs  stack_serialization.rs  stdlib.rs  tolk_parser.rs  toolchain.rs  vmtrace.rs  wallets.rs
tests/: cli_test.rs  common.rs  debug_test.rs  integration_test.rs
xtask/: Cargo.toml
(+1839 files in other folders)
