[package]
name = "emulator-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bigint = "4.4.3"
tonlib-core = "0.26.1"
num-bigint = "0.4.6"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
urlencoding = "2.1.3"
tycho-types = "0.3.0"
hex = "0.4.3"
base64 = "0.22.1"
parking_lot = "0.12.5"
lazy_static = "1.5.0"
thiserror = "2.0.17"
[build-dependencies]
pkg-config = "0.3.32"
bindgen = "0.72.1"
