[package]
name = "abi"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = { workspace = true }
tolk-syntax = { workspace = true }
crc = { workspace = true }
num-bigint = { workspace = true }
anyhow = { workspace = true }
tycho-types = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
