[package]
name = "abi"
version.workspace = true
edition.workspace = true

[dependencies]
tree-sitter = { workspace = true }
tolk-syntax = { workspace = true }
crc = { workspace = true }
num-bigint = { workspace = true }
anyhow = { workspace = true }
tycho-types = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
