[package]
name = "dap-client"
version.workspace = true
edition.workspace = true

[dependencies]
dap = { workspace = true, features = ["client"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
crossbeam-channel = { workspace = true }

[lints]
workspace = true
