[package]
name = "emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
tvmffi = { workspace = true }
ton-executor = { workspace = true }
tycho-types = { workspace = true }
serde = { workspace = true }
tonlib-core = { workspace = true }
anyhow = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
