[package]
name = "retrace"
version = "0.1.0"
edition = "2024"

[dependencies]
ton-executor = { workspace = true }
vmlogs = { workspace = true }
tycho-types = { workspace = true }
num-bigint = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

[lints]
workspace = true
