[package]
name = "tasm"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
tycho-types = { workspace = true }
smallvec = { workspace = true }
anyhow = { workspace = true }
ton-source-map = { workspace = true }

[lints]
workspace = true
