[package]
name = "tolk-linter"
version.workspace = true
edition.workspace = true

[dependencies]
tolk-syntax = { workspace = true }
tolk-resolver = { workspace = true }
tolk-ty = { workspace = true }
tolk-analysis = { workspace = true }
tolk-macros = { workspace = true }
acton-config = { workspace = true }
tree-sitter = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rustc-hash = { workspace = true }
memchr = { workspace = true }

[features]
profile_rules = []
