[package]
name = "tolk-macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
itertools = { workspace = true }
heck = { workspace = true }

[lints]
workspace = true
