[package]
name = "tolk-resolver"
version.workspace = true
edition.workspace = true

[dependencies]
tolk-syntax = { workspace = true }
tree-sitter = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }
smol_str = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
tempfile = { workspace = true }
