[package]
name = "tolkc"
version = "0.1.0"
description = "Tolk compiler crate"
edition = "2024"

[dependencies]
ton-source-map = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
include_dir = { workspace = true }
rustc-hash = { workspace = true }

[lints]
workspace = true
