[package]
name = "tolkc"
description = "Tolk compiler crate"
version.workspace = true
edition.workspace = true

[dependencies]
ton-source-map = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
include_dir = { workspace = true }
rustc-hash = { workspace = true }

[lints]
workspace = true
