[package]
name = "ton-api"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }
num-bigint = { workspace = true }
tycho-types = { workspace = true }

[lints]
workspace = true
