[package]
name = "ton-executor"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }

[build-dependencies]
pkg-config = { workspace = true }

[lints]
workspace = true
