[package]
name = "tvmffi"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }
tonlib-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tycho-types = { workspace = true }

[lints]
workspace = true
